// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category-list have data 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  contentContainerStyle={
    Object {
      "paddingVertical": 8,
    }
  }
  data={
    Array [
      Object {
        "id": "favourite",
        "image": "",
        "key": "abcdef",
        "lastUpdate": "022-08-20T18:51:49+00:00",
        "name": "favourite",
      },
      Object {
        "id": "favourite",
        "image": "",
        "key": "abcdefasdasd",
        "lastUpdate": "022-08-20T18:51:49+00:00",
        "name": "favourite",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          <RCTImageView
            internal_analyticTag={null}
            resizeMode="cover"
            source={
              Array [
                Object {
                  "uri": "https://i.vimeocdn.com/video/1486234694-2789256b3e16a01f78abaebcc3eeb1ef872b63bc8bfda834c8c4cc6b11fb578b-d",
                },
              ]
            }
            style={
              Object {
                "height": 363,
                "overflow": "hidden",
                "width": 363,
              }
            }
          />
          <View
            style={
              Object {
                "height": 24,
                "tintColor": "#ffffff",
                "width": 24,
              }
            }
          >
            <RCTImageView
              internal_analyticTag={null}
              resizeMode="cover"
              source={
                Array [
                  Object {
                    "uri": "",
                  },
                ]
              }
              style={
                Object {
                  "height": 24,
                  "overflow": "hidden",
                  "tintColor": "#ffffff",
                  "width": 24,
                }
              }
              tintColor="#ffffff"
            />
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Helvetica",
                    "fontSize": 15,
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginTop": 8,
                  },
                ]
              }
            >
              favourite
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "marginLeft": 8,
            }
          }
        >
          <RCTImageView
            internal_analyticTag={null}
            resizeMode="cover"
            source={
              Array [
                Object {
                  "uri": "https://i.vimeocdn.com/video/1486234694-2789256b3e16a01f78abaebcc3eeb1ef872b63bc8bfda834c8c4cc6b11fb578b-d",
                },
              ]
            }
            style={
              Object {
                "height": 363,
                "overflow": "hidden",
                "width": 363,
              }
            }
          />
          <View
            style={
              Object {
                "height": 24,
                "tintColor": "#ffffff",
                "width": 24,
              }
            }
          >
            <RCTImageView
              internal_analyticTag={null}
              resizeMode="cover"
              source={
                Array [
                  Object {
                    "uri": "",
                  },
                ]
              }
              style={
                Object {
                  "height": 24,
                  "overflow": "hidden",
                  "tintColor": "#ffffff",
                  "width": 24,
                }
              }
              tintColor="#ffffff"
            />
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "Helvetica",
                    "fontSize": 15,
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "marginTop": 8,
                  },
                ]
              }
            >
              favourite
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`category-list no data 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  contentContainerStyle={
    Object {
      "paddingVertical": 8,
    }
  }
  data={Array []}
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View />
</RCTScrollView>
`;
